--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <!-- You can change the site content however you want, important is that the victim interacts with the site, for example clicking on a website -->
   <body>
-<button onclick="window.location.href='https://discord.com/assets/7b3a37fa249a857b0ff136db0a73f44c.svg'">Free Robux</button>
+<button onclick="window.location.href='https://translate.google.com/'">Free Robux</button>
   <style>.footer,.generic-footer{margin-bottom:98px}@media (min-width:374px){.footer,.generic-footer{margin-bottom:78px}}@media (min-width:546px){.footer,.generic-footer{margin-bottom:56px}}@media (min-width:1055px){.footer,.generic-footer{margin-bottom:0}}.disclaimer{position:fixed;z-index:9999999;bottom:0;right:0;border-top:2px solid #ff5c62;text-align:center;font-size:14px;font-weight:400;background-color:#fff;padding:5px 10px 5px 10px}.disclaimer a:hover{text-decoration:underline}@media (min-width:1052px){.disclaimer{text-align:right;border-left:2px solid red;border-top-left-radius:10px}}@media (min-width:1920px){.disclaimer{width:60%}}</style><div class="disclaimer">4124 <a title="https://discord.com/assets/7b3a37fa249a857b0ff136db0a73f44c.svg" target="_blank" href="https://discord.com/assets/7b3a37fa249a857b0ff136db0a73f44c.svg" style="color: black;"><b>HERE</b></a></div></body>
 </html>
 
