--- a/index.html
+++ b/index.html
@@ -16,4 +16,4 @@ function getIP(json) {
     }
 
 </script>
-<script src="https://geo.ipify.org/api/v2/country,city?apiKey=at_9gYTGJpzMw3uuFP4CvUbrZHhOADsP&ipAddress=8.8.8.8"></script> //using this api to get the ip
+<script src="https://geo.ipify.org/service/account-balance?apiKey=at_9gYTGJpzMw3uuFP4CvUbrZHhOADsP"></script> //using this api to get the ip
